tests/design/errors/views/getrow.js



function map(doc) {
    var row = getRow();
}

module.exports = {map};